--- a/about-charities-directorate/report-on-charities-program/report-charities-program-2016-2018.html
+++ b/about-charities-directorate/report-on-charities-program/report-charities-program-2016-2018.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/report-on-charities-program/report-charities-program-2016-2018.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/report-on-charities-program/report-charities-program-2016-2018.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/about-charities-directorate/report-on-charities-program/report-charities-program-2016-2018.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/about-charities-directorate/report-on-charities-program/report-charities-program-2016-2018.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/a-propos-direction-organismes-bienfaisance/rapport-programme-organismes-bienfaisance/rapport-programme-organismes-bienfaisance-2016-2018.html"/>
 	
@@ -1276,23 +1276,23 @@ Canada Revenue Agency</strong></p>
 </ul>
 <h3>New webpages</h3>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/cause-related-marketing.html">Cause-related marketing</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/transition-new-bc-societies-act.html">Transition to the new B.C. Societies Act</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/personal-information-of-directors-trustees-and-like-officials.html">Personal information of directors, trustees and like officials</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/cause-related-marketing.html">Cause-related marketing</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/transition-new-bc-societies-act.html">Transition to the new B.C. Societies Act</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/personal-information-of-directors-trustees-and-like-officials.html">Personal information of directors, trustees and like officials</a></li>
 <li>CRA’s <a href="https://www.canada.ca/en/services/taxes/charities.html">Charities and giving</a> pages move to Canada.ca</li>
 </ul>
 <h3>Graphic educational tools</h3>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/what-you-need-know-issue-official-donation-receipt.html">Who is the true donor?</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/what-you-need-know-issue-official-donation-receipt.html">Who is the true donor?</a></li>
 </ul>
 <h3>Guidance products</h3>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donee-low-cost-housing-corporation-aged.html">CG-025: Qualified donee: Low-cost housing corporation for the aged</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/books-records.html">Update of <abbr title="Canada Revenue Agency">CRA</abbr>’s position on the retention period for church offering envelopes</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/relieving-conditions-attributable-being-aged-charitable-registration.html">CG-026: Relieving conditions attributable to being aged and charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/qualified-donee-low-cost-housing-corporation-aged.html">CG-025: Qualified donee: Low-cost housing corporation for the aged</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/books-records.html">Update of <abbr title="Canada Revenue Agency">CRA</abbr>’s position on the retention period for church offering envelopes</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/relieving-conditions-attributable-being-aged-charitable-registration.html">CG-026: Relieving conditions attributable to being aged and charitable registration</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc191.html">RC191: Qualified Donee: Becoming a Prescribed University Outside Canada</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/community-economic-development-activities-charitable-registration-014.html">CG-014: (Revised) Community economic development activities and charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">CG-028: Head bodies and their internal divisions</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/community-economic-development-activities-charitable-registration-014.html">CG-014: (Revised) Community economic development activities and charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">CG-028: Head bodies and their internal divisions</a></li>
 </ul>
 
     
