--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/a-propos-organismes-bienfaisance-enregistres/quelle-est-difference-entre-organisme-bienfaisance-enregistre-organisme-sans-lucratif.html"/>
 	
@@ -397,7 +397,7 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 
 <h2><strong>Registered charities</strong></h2>
-<p>Registered charities are charitable organizations, public foundations, or private foundations that are created and resident in Canada. They must use their resources for <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/describing-your-activities.html">charitable activities</a> and have <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html">charitable purposes</a> that fall into one or more of the following categories:</p>
+<p>Registered charities are charitable organizations, public foundations, or private foundations that are created and resident in Canada. They must use their resources for <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/describing-your-activities.html">charitable activities</a> and have <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html">charitable purposes</a> that fall into one or more of the following categories:</p>
 <ul>
 <li>the relief of poverty</li>
 <li>the advancement of education</li>
@@ -596,7 +596,7 @@ if(typeof hTags != 'undefined' && hTags != null){
         </tr>
         <tr>
             <td data-label="Topic">Charitable registration number</td>
-            <td data-label="Registered charity" >Is issued a charitable <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">registration number</a> once approved by the CRA</td>
+            <td data-label="Registered charity" >Is issued a charitable <a href="https://cra-design.github.io/charities/operating-a-registered-charity/registration-number.html">registration number</a> once approved by the CRA</td>
             <td data-label="NPO" >Is not issued a charitable registration number</td>
         </tr>
         <tr>
@@ -606,7 +606,7 @@ if(typeof hTags != 'undefined' && hTags != null){
         </tr>
         <tr>
             <td data-label="Topic">Spending requirement (disbursement quota)</td>
-            <td data-label="Registered charity" >Must spend a minimum amount on its own charitable activities or as gifts to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#qualdonee">qualified donees</a></td>
+            <td data-label="Registered charity" >Must spend a minimum amount on its own charitable activities or as gifts to <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#qualdonee">qualified donees</a></td>
             <td data-label="NPO" >Does not have a spending requirement</td>
         </tr>
         <tr>
@@ -680,8 +680,8 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-charitable.html">What is charitable?</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/factors-that-will-prevent-organization-being-registered-a-charity.html">Factors that will prevent an organization from being registered as a charity</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/what-charitable.html">What is charitable?</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/factors-that-will-prevent-organization-being-registered-a-charity.html">Factors that will prevent an organization from being registered as a charity</a></li>
 </ul>
 
 
