--- a/operating-a-registered-charity/questions-answers-about-gifting-receipting.html
+++ b/operating-a-registered-charity/questions-answers-about-gifting-receipting.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/questions-answers-about-gifting-receipting.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/questions-answers-about-gifting-receipting.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/questions-answers-about-gifting-receipting.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/questions-answers-about-gifting-receipting.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/questions-reponses-a-propos-dons-recus.html"/>
 	
@@ -361,7 +361,7 @@ Questions and answers about gifting and receipting</h1>
  </details> 
  <details>
   <summary class="text-primary" id="q4">4. Can a charity issue a receipt instead of a speaking fee for a speaker at its conference? </summary> 
-  <p>No. To be considered a gift, there must be a voluntary transfer of property. Contributions of services (for example, time, skills, or effort) are not property, so they do not qualify as gifts. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/gifts-services.html">Gifts of services</a>.</p> 
+  <p>No. To be considered a gift, there must be a voluntary transfer of property. Contributions of services (for example, time, skills, or effort) are not property, so they do not qualify as gifts. For more information, go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/gifts-services.html">Gifts of services</a>.</p> 
  </details> 
  <details>
   <summary class="text-primary" id="q5">5. Can a charity issue a receipt for a court-ordered payment it received? </summary> 
@@ -388,7 +388,7 @@ Questions and answers about gifting and receipting</h1>
   <summary class="text-primary" id="q10">10. An organization that had its registration as a charity revoked is continuing to take donations and is telling donors it will give them receipts for these donations once it is re-registered. Can the organization do this? </summary> 
   <p>An organization that has its registration as a charity revoked may continue to receive gifts. However, it cannot issue donation receipts for these gifts while it is not registered as a charity.</p> 
   <p>Once an organization is re-registered as a charity, it can issue donation receipts for the gifts it received while it was revoked, as long as they meet the definition of a gift. This is because an organization that is re-registered as a charity is considered registered as of the date it was revoked.</p> 
-  <p>Donors should be aware that there is no guarantee that an organization will get re-registered as a charity. For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/apply-reregistration.html">Apply for re-registration</a>.</p> 
+  <p>Donors should be aware that there is no guarantee that an organization will get re-registered as a charity. For more information, see <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-reregistration.html">Apply for re-registration</a>.</p> 
  </details> 
  <details>
   <summary class="text-primary" id="q11">11. Can donations to U.S. charities be claimed on a Canadian income tax return?</summary> 
