--- a/policies-guidance/archived-policy-commentary.html
+++ b/policies-guidance/archived-policy-commentary.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/archived-policy-commentary.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/archived-policy-commentary.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/archived-policy-commentary.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/archived-policy-commentary.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/archivee-commentaire-sujet-politique.html"/>
 	
@@ -301,7 +301,7 @@ ARCHIVED - Policy Commentary</h1>
  <li>proof that the gift has been made (for example a copy of the cheque).</li> 
 </ul>  <p>The Charities Directorate will then consider whether the charitable organization outside Canada qualifies based on a two-part test. First, the organization must demonstrate that it was the recipient of a gift. Second, the organization must demonstrate that except for the residency requirement, it would meet the Canadian common law definition of charitable, and would generally be eligible for registration in Canada.</p>  <p>Once the Charities Directorate has determined whether a gift has been made and whether the charitable organization outside Canada would meet the registration requirements, it will provide written confirmation of its decision. If the charitable organization outside Canada meets the two-part test, its name will be added to the Attachment.</p>  <p>The Attachment is modified from time to time to reflect additions and deletions to the list of organizations.</p>  <p><strong>References</strong></p>  <ul> 
  <li><a href="/chrts-gvng/chrts/plcy/csp/csp-g01-eng.html">Gift(donation), CSP-G01.</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">Qualified donees, CG-010.</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/qualified-donees.html">Qualified donees, CG-010.</a></li> 
  <li><span class="nowrap"><em>Income Tax Act,</em> R.S.C. 1985 (5th supp.) c. 1, subparas. 110.1(1)(a)(vii), (viii), para. 118.1(1)(g.1) and ss. 149.1(1).</span></li> 
 </ul>   
     
