--- a/policies-guidance/consultation-feedback-on-policies-guidance.html
+++ b/policies-guidance/consultation-feedback-on-policies-guidance.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/consultation-feedback-on-policies-guidance.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/consultation-feedback-on-policies-guidance.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/consultation-feedback-on-policies-guidance.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/consultation-feedback-on-policies-guidance.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/consultations-commentaires-sujet-politiques-lignes-directrices.html"/>
 	
@@ -302,7 +302,7 @@ Feedback on policies and guidance</h1>
 
 <section class="alert alert-info">
 	<h2 class="h3">Note</h2>
-	<p>If you have any questions about our policies and guidance products, <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact our Client Services</a>.</p>
+	<p>If you have any questions about our policies and guidance products, <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact our Client Services</a>.</p>
 </section>
 
 
@@ -336,9 +336,9 @@ Ottawa ON&nbsp; K1A 0L5</p>
         <h2 wiid="N6077">Related links</h2>
 <ul wiid="C6126">
 <li wiid="C6127"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications.html" wiid="C6128">CRA forms and publications</a></li>
-<li wiid="C6129"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-a-index.html" wiid="C6130">Index alphabétique des sujets</a></li>
-<li wiid="C6131"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html" wiid="C6132">Glossary</a></li>
-<li wiid="C6133"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html" wiid="C6134">Contact information</a></li>
+<li wiid="C6129"><a href="https://cra-design.github.io/charities/charities-giving-a-index.html" wiid="C6130">Index alphabétique des sujets</a></li>
+<li wiid="C6131"><a href="https://cra-design.github.io/charities/charities-giving-glossary.html" wiid="C6132">Glossary</a></li>
+<li wiid="C6133"><a href="https://cra-design.github.io/charities/contact-charities-directorate.html" wiid="C6134">Contact information</a></li>
 </ul>
 
     
