--- a/policies-guidance/head-bodies-and-their-internal-divisions.html
+++ b/policies-guidance/head-bodies-and-their-internal-divisions.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/les-organismes-principaux-et-leurs-divisions-internes.html"/>
 	
@@ -405,8 +405,8 @@ September 22, 2017</p>
 <h2>References</h2>
 <ul>
 <li>Income Tax Act, R.S.C. 1985 (5th supp.) c. 1, ss. 248 (1)</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity.html">Operating a registered charity</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">T3010 charity return – Filing information</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating a registered charity</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">T3010 charity return – Filing information</a></li>
 </ul>
 <p>&nbsp;</p>
 
