--- a/policies-guidance/non-qualified-investment-tax-liability.html
+++ b/policies-guidance/non-qualified-investment-tax-liability.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/non-qualified-investment-tax-liability.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/non-qualified-investment-tax-liability.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/non-qualified-investment-tax-liability.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/non-qualified-investment-tax-liability.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/placement-non-admissible-dette-fiscale.html"/>
 	
@@ -332,7 +332,7 @@ Non-qualified investment – Tax liability</h1>
         <h2 class="font-large">References</h2>
  <ul> 
  <li>Income Tax Act, R.S.C<em>.</em> 1985 (5<sup>th</sup> supp.) c. 1, ss. 149.1(1), s. 189</li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d06-debt.html">Debt, CSP-D06</a>&nbsp;</li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d06-debt.html">Debt, CSP-D06</a>&nbsp;</li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2140.html">Part V Tax Return - Tax on Non-Qualified Investments of a Registered Charity, T2140</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-27.html">Registered Charities Newsletter, Issue No. 27</a></li> 
 </ul>   
