--- a/policies-guidance/policy-commentary-007-political-party-s-use-charitys-premises.html
+++ b/policies-guidance/policy-commentary-007-political-party-s-use-charitys-premises.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-007-political-party-s-use-charitys-premises.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-007-political-party-s-use-charitys-premises.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-007-political-party-s-use-charitys-premises.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-007-political-party-s-use-charitys-premises.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-007-utilisation-parti-politique-locaux-organisme-bienfaisance.html"/>
 	
@@ -329,7 +329,7 @@ Political party's use of charity's premises</h1>
     
         <h2 class="font-large"><strong>References</strong></h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/public-policy-dialogue-development-activities.html">CG-027, Public policy dialogue and development activities by charities</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/public-policy-dialogue-development-activities.html">CG-027, Public policy dialogue and development activities by charities</a></li>
 <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, paras. 149.1(6.1)(c) and (6.2)(c)</li>
 </ul>
 
