--- a/policies-guidance/policy-commentary-014-funding-qualified-donees.html
+++ b/policies-guidance/policy-commentary-014-funding-qualified-donees.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-014-funding-qualified-donees.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-014-funding-qualified-donees.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-014-funding-qualified-donees.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-014-funding-qualified-donees.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-014-versement-fonds-a-donataire-reconnu.html"/>
 	
@@ -325,7 +325,7 @@ Funding qualified donees</h1>
     
         <h2 class="font-large"><strong>References</strong></h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html">Policy statement CPS-026, Guidelines for the registration of umbrella organizations and title holding organizations</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html">Policy statement CPS-026, Guidelines for the registration of umbrella organizations and title holding organizations</a></li> 
  <li>Black's Law Dictionary, 7<sup>th</sup> ed., St. Paul: West Group, 1999</li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c.1, ss. 149.1(1)</li> 
 </ul>   
