--- a/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html
+++ b/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-022-tarifs-assurance-collective-organismes-bienfaisance-enregistres.html"/>
 	
@@ -325,7 +325,7 @@ Group insurance rates for registered charities</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html">Policy statement CPS-026, Guidelines for the registration of umbrella organizations and title holding organizations</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html">Policy statement CPS-026, Guidelines for the registration of umbrella organizations and title holding organizations</a></li> 
 </ul>   
     
 
