--- a/policies-guidance/policy-commentary-026-third-party-fundraisers.html
+++ b/policies-guidance/policy-commentary-026-third-party-fundraisers.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-026-third-party-fundraisers.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-026-third-party-fundraisers.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-026-third-party-fundraisers.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-026-third-party-fundraisers.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-026-collecte-fonds-tiers.html"/>
 	
@@ -345,7 +345,7 @@ Third party fundraisers</h1>
     
         <h2 class="font-large"><strong>References</strong></h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a></li>
 <li>Income Tax Act, R.S.C. 1985 (5th supp.) c. 1, ss. 248(30), (31) and (32)</li>
 <li>Income Tax Regulations, C.R.C. 1978, c. 945, s. 3501(1)</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-7-charities-non-profit-organizations/series/income-tax-folio-s7-f1-c1-split-receipting-deemed-fair-market-value.html">S7-F1-C1, Split-receipting and Deemed Fair Market Value</a></li>
