--- a/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html
+++ b/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-028-designation-organismes-bienfaisance-associes-accordee-a-organismes-bienfaisance-independants.html"/>
 	
@@ -337,7 +337,7 @@ Associated status for unrelated charities</h1>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t3011.html">Form T3011, Application for Designation as Associated Charities</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/ic77-6.html">Information circular IC77-6R, Registered Charities: Designation as Associated Charities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a></li>
 <li>Income Tax Act, R.S.C. 1985 (5th supp.) c. 1, ss. 149.1(6) and (7)</li>
 </ul>
 
