--- a/policies-guidance/policy-statement-005-festivals-promotion-tourism.html
+++ b/policies-guidance/policy-statement-005-festivals-promotion-tourism.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-005-festivals-promotion-tourism.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-005-festivals-promotion-tourism.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-005-festivals-promotion-tourism.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-005-festivals-promotion-tourism.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/enonce-politique-005-festivals-promotion-tourisme.html"/>
 	
@@ -364,7 +364,7 @@ Festivals and the promotion of tourism</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-f03-festival.html">Summary policy CSP-F03, Festival</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-f03-festival.html">Summary policy CSP-F03, Festival</a></li> 
  <li><a href="http://decisions.fca-caf.gc.ca/en/2006/2006fca343/2006fca343.html">Travel Just v. M.N.R (2006) FCA 343 2006-10-24</a></li> 
 </ul>  
     
