--- a/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html
+++ b/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/enonce-politique-011-enregistrement-associations-canadiennes-sport-amateur.html"/>
 	
@@ -303,7 +303,7 @@ Registration of Canadian amateur athletic associations</h1>
 
     
         <h2>Policy statement</h2>
-<p><strong>Notice:</strong> The <a href="http://www.budget.canada.ca/2011/home-accueil-eng.html">2011 Federal Budget</a> introduced new measures affecting registered Canadian amateur athletic associations that will come into force on January 1, 2012. This policy is applicable until December 31, 2011. Information on the requirements for registration as of January 1, 2012, is being developed. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html">Canadian amateur athletic associations</a>.</p>  <p><strong>Reference number</strong><br/> CPS-011</p>  <p><strong>Effective date</strong><br/> October 28, 1996</p>  
+<p><strong>Notice:</strong> The <a href="http://www.budget.canada.ca/2011/home-accueil-eng.html">2011 Federal Budget</a> introduced new measures affecting registered Canadian amateur athletic associations that will come into force on January 1, 2012. This policy is applicable until December 31, 2011. Information on the requirements for registration as of January 1, 2012, is being developed. For more information, go to <a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html">Canadian amateur athletic associations</a>.</p>  <p><strong>Reference number</strong><br/> CPS-011</p>  <p><strong>Effective date</strong><br/> October 28, 1996</p>  
     
 
 
