--- a/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html
+++ b/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/enonce-politique-012-avantages-procures-peuples-autochtones-canada.html"/>
 	
@@ -358,8 +358,8 @@ Benefits to Aboriginal peoples of Canada</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
 <li>Native Communications Society of B.C. v. Canada (M.N.R.) (F.C.A.), [1986] 3 F.C 471</li>
 </ul>
 
