--- a/list-companies-authorized-produce-customized-forms.html
+++ b/list-companies-authorized-produce-customized-forms.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/list-companies-authorized-produce-customized-forms.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/list-companies-authorized-produce-customized-forms.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/charities/list-companies-authorized-produce-customized-forms.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/charities/list-companies-authorized-produce-customized-forms.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/liste-entreprises-autorisees-a-produire-formulaires-personnalises.html"/>
 	
