--- a/operating-a-registered-charity/toolbox-directors-officers-volunteers/business-account.html
+++ b/operating-a-registered-charity/toolbox-directors-officers-volunteers/business-account.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/business-account.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/business-account.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/business-account.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/business-account.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/dossier-entreprise.html"/>
 	
@@ -306,7 +306,7 @@
 <p>Many organizations applying for charitable registration already have a <abbr title="business number">BN</abbr> and an associated RR account with the <abbr title="Canada Revenue Agency">CRA</abbr>.</p>
 <p>Consider the following before requesting a new <abbr title="business number">BN</abbr> and RR account:</p>
 <ul class="list-unstyled">
-<li><details><summary>Is your organization already registered?</summary><p>If your organization is already a registered charity, a registered Canadian amateur athletic association, a registered national arts service organization, or a registered <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">head body</a>,&nbsp;you are ready to go to <a href="#step-3" style="background-color: rgb(245, 245, 245);">step 3 - Sign in to My Business Account</a>.</p>
+<li><details><summary>Is your organization already registered?</summary><p>If your organization is already a registered charity, a registered Canadian amateur athletic association, a registered national arts service organization, or a registered <a href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">head body</a>,&nbsp;you are ready to go to <a href="#step-3" style="background-color: rgb(245, 245, 245);">step 3 - Sign in to My Business Account</a>.</p>
 </details> <details><summary>Is your organization incorporated under federal, provincial, or territorial statutes?<br></summary><p>If your organization is incorporated but not yet a registered charity, a registered Canadian amateur athletic association, or a registered national arts service organization, you already have a <abbr title="business number">BN</abbr>.</p>
 <p>You will need to <a href="#rraccount" style="background-color: rgb(245, 245, 245);">request an associated RR account</a>.</p>
 </details> <details><summary>Is your organization an internal division under a head body?</summary><p>If&nbsp;<strong>yes</strong>, you will need to contact your head body to confirm its <abbr title="business number">BN</abbr>&nbsp;and that an associated RR account was created for your internal division.</p>
@@ -316,11 +316,11 @@
 <li>Your head body will then need to&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization.html">authorize you under their <abbr title="business number">BN</abbr> and your RR account</a>.</li>
 </ol>
 <p>&nbsp;</p>
-<p>For more information about internal divisions, visit <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html" style="background-color: rgb(245, 245, 245);">Guidance CG-028, Head bodies and their internal divisions</a>.</p>
+<p>For more information about internal divisions, visit <a href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html" style="background-color: rgb(245, 245, 245);">Guidance CG-028, Head bodies and their internal divisions</a>.</p>
 </details> <details><summary>Has your organization submitted an application to be a registered charity in the past?</summary><p>If your organization started the application process in the past but was never registered, a&nbsp;BN&nbsp;and an associated RR account may have already been assigned.&nbsp;</p>
-<p>Before resuming the application process,&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html" style="background-color: rgb(245, 245, 245);">contact us</a>&nbsp;to confirm if an account already exists for your organization. This will help you ensure that the right people are authorized on your organization’s account.</p>
+<p>Before resuming the application process,&nbsp;<a href="https://cra-design.github.io/charities/contact-charities-directorate.html" style="background-color: rgb(245, 245, 245);">contact us</a>&nbsp;to confirm if an account already exists for your organization. This will help you ensure that the right people are authorized on your organization’s account.</p>
 </details> <details><summary>Is your organization trying to access <abbr title="My Business Account">MyBA</abbr> after having its charitable status revoked?</summary><p>If <strong>yes</strong>, when a charity or <abbr title="registered Canadian amateur athletic association">RCAAA</abbr>'s registration is revoked, it can no longer access its RR program account on <abbr title="My Business Account">MyBA</abbr>.</p>
-<p>To apply for re-registration, you need to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact us</a>. After confirming that you are authorized on the file, we will restore access to your organization’s RR account on <abbr title="My Business Account">MyBA</abbr>.</p>
+<p>To apply for re-registration, you need to <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact us</a>. After confirming that you are authorized on the file, we will restore access to your organization’s RR account on <abbr title="My Business Account">MyBA</abbr>.</p>
 </details></li>
 </ul>
 <p class="mrgn-tp-md">If you answer <strong>no</strong> to all the questions above, proceed to the next step.</p>
@@ -422,7 +422,7 @@
 </details></li>
 </ul>
 <div class="alert alert-warning mrgn-tp-md"><h4>A <abbr title="business number">BN</abbr> and RR account do not automatically make your organization a registered charity</h4>
-<p>To become one, you will still need to submit an application to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">register a charity under the Income Tax Act</a>.</p>
+<p>To become one, you will still need to submit an application to <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">register a charity under the Income Tax Act</a>.</p>
 </div>
 </li>
 <li><h3 id="step-3">Sign in to My Business Account</h3>
@@ -435,7 +435,7 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html#q3">Register for Represent a client</a> to get a repID.</li>
 <li>Your head body can then authorize you under their <abbr title="business number">BN</abbr> and your RR account.</li>
 </ol>
-<p>For more information about internal divisions, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">Guidance CG-028, Head bodies and their internal divisions</a>.</p>
+<p>For more information about internal divisions, see <a href="https://cra-design.github.io/charities/policies-guidance/head-bodies-and-their-internal-divisions.html">Guidance CG-028, Head bodies and their internal divisions</a>.</p>
 </section><p>If you already have a <abbr title="Canada Revenue Agency">CRA</abbr> sign-in account, you can use the same username and password to access all of our online services:</p>
 <ul>
 <li>My Account</li>
@@ -479,7 +479,7 @@
 <li><details><summary>CRA security code by mail</summary> Select this option to receive a <abbr title="Canada Revenue Agency">CRA</abbr> security code by mail to the address you have on record with the <abbr title="Canada Revenue Agency">CRA</abbr>. You should receive it within 5 to 10 days. Once you have entered the security code, you will be able to access your organization’s account on <abbr title="My Business Account">MyBA</abbr>.</details></li>
 </ul>
 <section class="alert alert-info mrgn-tp-md"><h3>Don't see your organization's <abbr title="business number">BN</abbr> in <abbr title="My Business Account">MyBA</abbr>?</h3>
-<p>If you don’t see your organization’s <abbr title="business number">BN</abbr> after you signed in to <abbr title="My Business Account">MyBA</abbr>, and you can’t add it to your profile, <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact us</a>. We will need your social insurance number to link your identity to your organization’s account. Other directors or owners of the <abbr title="business number">BN</abbr> will not be able to see your <abbr title="social insurance number">SIN</abbr>.</p>
+<p>If you don’t see your organization’s <abbr title="business number">BN</abbr> after you signed in to <abbr title="My Business Account">MyBA</abbr>, and you can’t add it to your profile, <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact us</a>. We will need your social insurance number to link your identity to your organization’s account. Other directors or owners of the <abbr title="business number">BN</abbr> will not be able to see your <abbr title="social insurance number">SIN</abbr>.</p>
 </section></details></li>
 <li><h3 id="step-4">Access your business number through My Business Account</h3>
 <p>Now that you have access to <abbr title="My Business Account">MyBA</abbr>, you’ll need to access your <abbr title="business number">BN</abbr>.</p>
@@ -500,12 +500,12 @@
 </details></li>
 </ul>
 <section class="alert alert-info mrgn-tp-md"><h3>Don’t see your organization’s <abbr title="business number">BN</abbr> in <abbr title="My Business Account">MyBA</abbr>?</h3>
-<p>If you don’t see your organization’s <abbr title="business number">BN</abbr> after you signed in to <abbr title="My Business Account">MyBA</abbr>, and you can’t add it to your profile, <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact us</a>. We will need your social insurance number to link your identity to your organization's account.</p>
+<p>If you don’t see your organization’s <abbr title="business number">BN</abbr> after you signed in to <abbr title="My Business Account">MyBA</abbr>, and you can’t add it to your profile, <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact us</a>. We will need your social insurance number to link your identity to your organization's account.</p>
 </section><p class="mrgn-tp-md">Congratulations! You are ready to manage your organization’s affairs through <abbr title="My Business Account">MyBA</abbr>:</p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return.html">File your T3010 information return</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes.html">Make a change to your organization</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">Apply to register as a charity or a registered Canadian amateur athletic association</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return.html">File your T3010 information return</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes.html">Make a change to your organization</a></li>
+<li><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Apply to register as a charity or a registered Canadian amateur athletic association</a></li>
 </ul>
 </li>
 </ol>
@@ -521,7 +521,7 @@
 
     
         <h2>We're here to help</h2>
-<p>Don't hesitate to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact us</a>&nbsp;if you require assistance.</p>
+<p>Don't hesitate to <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact us</a>&nbsp;if you require assistance.</p>
 <p>Are you signed up for our <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-charities-giving-whats-new.html">electronic mailing list</a>? Sign up today to get the latest charities news and information on upcoming webinars.</p>
 
     
