--- a/policies-guidance/policy-commentary-004-housing-seniors-life-tenancy-agreement.html
+++ b/policies-guidance/policy-commentary-004-housing-seniors-life-tenancy-agreement.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-004-housing-seniors-life-tenancy-agreement.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-004-housing-seniors-life-tenancy-agreement.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-004-housing-seniors-life-tenancy-agreement.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-004-housing-seniors-life-tenancy-agreement.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-004-logement-personnes-agees-convention-tenance-viagere.html"/>
 	
