--- a/policies-guidance/policy-commentary-012-pocket-expenses.html
+++ b/policies-guidance/policy-commentary-012-pocket-expenses.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-012-pocket-expenses.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-012-pocket-expenses.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-012-pocket-expenses.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-012-pocket-expenses.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/commentaire-sujet-politique-012-depenses-remboursables.html"/>
 	
@@ -333,7 +333,7 @@ Out-of-pocket expenses</h1>
     
         <h2 class="font-large"><strong>References</strong></h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-025-expenses-incurred-volunteers.html">Policy commentary CPC-025, Expenses incurred by volunteers</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-025-expenses-incurred-volunteers.html">Policy commentary CPC-025, Expenses incurred by volunteers</a></li> 
 </ul>   
     
 
