--- a/policies-guidance/policy-statement-006-registered-charities-making-improvements-property-leased-others.html
+++ b/policies-guidance/policy-statement-006-registered-charities-making-improvements-property-leased-others.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-006-registered-charities-making-improvements-property-leased-others.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-006-registered-charities-making-improvements-property-leased-others.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-006-registered-charities-making-improvements-property-leased-others.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-006-registered-charities-making-improvements-property-leased-others.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/enonce-politique-006-organismes-bienfaisance-enregistres-apportent-ameliorations-a-biens-louent-autres-personnes.html"/>
 	
